--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.2",
